--- a/app/scss/bootstrap/mixins/_step_bar.scss
+++ b/app/scss/bootstrap/mixins/_step_bar.scss
@@ -16,5 +16,6 @@
     background-size: $o-stepbar-arrow-width $o-stepbar-height;
     $arrow-svg: arrow-svg($color);
     background-image: url(if($bootstrap-sass-asset-helper, twbs-image-path("data:image/svg+xml,#{$arrow-svg}"), "data:image/svg+xml,#{$arrow-svg}"));
+    background-repeat: no-repeat;
   }
 }
